--- a/backend/supabase/config.toml
+++ b/backend/supabase/config.toml
@@ -385,7 +385,7 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.gohighlevel-webhook]
 enabled = true
-verify_jwt = true
+verify_jwt = false  # Disabled to allow unauthenticated webhooks from GoHighLevel
 import_map = "./functions/gohighlevel-webhook/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
